# quadratic-funding

./: LICENSE  README.md  clr-matching.ipynb  pyproject.toml
contract-project/: .gitignore  .solhint.json  README.md  buidler.config.ts  package-lock.json  package.json  prettier.config.js  tsconfig.json
contract-project/abis/: CEMToken.json  EthChicagoQF.json
contract-project/contracts/: CEM.sol  CEMToken.sol  Contributions.sol  Counter.sol  EthChicagoQF.sol
contract-project/scripts/: deploy.ts
contract-project/test/: cemToken.ts  contributions.ts  counter.ts  ethChicagoQF.ts
matching/: clr-matching.ipynb  clr.py  eth_chicago_QF_contract_abi.py  pyproject.toml
