[tool.poetry]
name = "quadratic-funding"
version = "0.1.0"
description = "A CLR matching script for the Chicago Ethereum Meetup"
authors = ["Spencer Graham <sl.graha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
ipykernel = "^5.1.4"
seaborn = "^0.10.0"
pandas = "^1.0.0"
eth-utils = "^1.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
